--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>It makes use of the fact that each photo taken by a smartphone user is subtly unique. Maskker uses a perceptual image
             hashing algorithm so that small changes to a photo caused by compression or modest resize don't cause any problems.
             Images are never sent to any server, they're simply hashed in-browser and then discarded. Maskker can be used
-            anywhere but it was designed to be used for sites where user's are commonly incognito.' </p>
+            anywhere but it was designed to be used for sites where users are often browing in incognito mode.' </p>
         <p>We believe that choosing two photos to authenticate yourself with is a lot easier than remembering a strong password
             that looks like 'fn&71!dnkjsd'.</p>
 
