--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <div id="example">
             <script src="maskker.min.js"></script>
             <span id="maskker"><span style="color:blue; cursor: pointer;">Demo: Click or tap here and select two images</span></span>
-            <br><br><div id="hashes"></div>
+            <br>
+            <br>
+            <div id="hashes"></div>
             <script>
                 maskker.register({
                 selector:'#maskker',
@@ -49,9 +51,8 @@
         <p> Just include maskker.min.js on your page and then use the maskker.register() function. Masker will output three things:
             a username, a password, and a friendly name.
         </p>
-        <p>The friendly name is provided as an indicator to let users know they provided the correct to images. It's provided
-            to prevent them needing to input a name that's really not important most of the time. View the source of this
-            page for a working example.</p>
+        <p>The friendly name is provided as an indicator to let users know they provided a consistent pair of images between
+            login attempts. View the source of this page for a working example.</p>
         </p>
         <footer class="site-footer">
             <span class="site-footer-owner"><a href="https://github.com/m1sta/maskker">Maskker</a> is maintained by <a href="https://github.com/m1sta">m1sta</a>.</span>
