--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="project-name">Maskker</h1>
         <h2 class="project-tagline">User authentication using camera roll.</h2>
         <a href="https://m1sta.github.io/maskker/maskker.min.js" class="btn">Download masker.min.js</a>
-        <a href="view-source:https://m1sta.github.io/maskker/index.html" class="btn">Download example</a>
+        <a href="view-source:https://m1sta.github.io/maskker/example.html" class="btn">Download example</a>
     </section>
 
     <section class="main-content">
